--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -5,11 +5,8 @@
   padding: 1rem 2rem;
   background-color: white;
   height: 12vh;
- 
   color:black;
   border-bottom: 1px solid black;
-  
- 
 }
 
 .navLinks {
@@ -29,15 +26,11 @@
 }
 
 .logo img{
-
   height: 80px;
    width: auto;
    margin-left: 45vw;
   
 }
-
-
-
 
 .navLinks li a:hover {
   color: teal;
@@ -47,12 +40,7 @@
 
   height: 85px;
   width: auto;
-  /* background-color: rgb(246, 250, 253); */
-
   border-radius: 100%;
-
-  
-   
 }
 
 .userimg img:hover{
@@ -62,38 +50,19 @@
 
 .dropdown {
 position: absolute;
+background-color:rgb(3, 162, 162);
+border-radius: 14px;
+padding: 5px 16px;
+z-index: 1000;
 
-right: 0;
-background-color:rgb(242, 250, 250);
-border-radius: 4px;
-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-padding: 6px;
-z-index: 10;
 }
 
 .dropdown li {
-list-style: none;
-margin-bottom: 8px;
+  color: white;
 }
 
-
-
-.dropdown li:last-child {
-margin-bottom: 0;
-}
-
-.dropdown li a {
-color: #333333;
-text-decoration: none;
-padding: 8px;
-display: block;
-}
-
-.dropdown li a:hover {
-
-font-weight: 500;
-
-
+.dropdown li:hover{
+  cursor: pointer;
 }
 
 @media (max-width: 850px) {
