--- a/styles/playlist.module.css
+++ b/styles/playlist.module.css
@@ -1,15 +1,17 @@
 /* styles/playlists.module.css */
 .container {
     display: flex;
-    height: 100vh;
+    height: 85vh;
     margin-top: 20px;
+    
   }
   
   .leftPanel {
     width: 20vw;
-    height: 95%;
+    height: 100%;
     overflow-y: auto;
     border-right: 1px solid #ccc;
+    /* background-color: blue; */
   }
 
 
@@ -51,17 +53,13 @@
     justify-content: space-between;
   }
 
-  
 
   .leftPanel img{
 
     height: 30px;
     width: auto
-    /* transition: transform 0.2s ease-in-out; */
   }
 
-  
- 
 
   .listContainer{
     display: flex;
@@ -72,13 +70,15 @@
     border-bottom: 2px solid gray;
   }
 
- 
-  
   .rightPanel {
     flex: 1;
     padding: 20px;
+    overflow-y: auto;
+    /* background-color: red; */
+    height: 100%;
+
   }
-  
+
   .rightPanel h1 {
     margin: 0;
     margin-bottom: 20px;
@@ -113,10 +113,7 @@
     font-weight: 400;
 
     border: 0px;
-    
   
-
-
   }
 
   .leftPanel input{
