--- a/styles/playlist.module.css
+++ b/styles/playlist.module.css
@@ -176,14 +176,17 @@
     }
 
     .leftPanel {
+      
+      
       width: 100vw;
       height: fit-content;
-      overflow-x: auto;
+      overflow-x: hidden;
       flex-direction: row;
       border-right: 1px solid #ccc;
+      /* background-color: red; */
     }
     .leftPanel li{
-      width: 350px;
+      width: fit-content
       
     }
 
@@ -197,12 +200,41 @@
       display: none;
     }
 
-    .alllists{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
+    .rightPanel{
+      
+      overflow-x: hidden;
     }
+
+    .alllists{
+      width: 100vw;
+      /* margin-left: 20px; */
+      overflow-x: auto;
+      display: flex;
+      /* padding-left: 15px; */
+      flex-direction: row;
+      /* flex-wrap: wrap; */
+      align-items:flex-end
+      /* justify-content: center; */
+    }
+
+    .alllists::-webkit-scrollbar{
+      width: 2px;
+    }
+    .alllists::-webkit-scrollbar-thumb {
+      background-color: #888; /* Color of the scrollbar thumb */
+      border-radius: 8px; /* Rounded corners for the thumb */
+    }
+    
+    .alllists::-webkit-scrollbar-thumb:hover {
+      background-color: #555; /* Color of the scrollbar thumb on hover */
+    }
+    
+    .alllists::-webkit-scrollbar-track {
+      width: 2px;
+      background-color: #f1f1f1; /* Color of the scrollbar track */
+      border-radius: 4px; /* Rounded corners for the track */
+    }
+
 
     
   }
